@@ -84,7 +84,7 @@ I want to thank the help and the collaboration of the following people (date sor
 
 -Everyone at several forums about Spectrum, ZX80, ZX81, Z88, Raspberry Pi, etc for all the suggestions to my emulator
 -Everyone who test the beta and stable versions of the emulator and report bugs
--The following people who donated to ZEsarUX, in chronological order: Peter Jones, Daniel Leon Gonzalez, Jose Luis Fernandez Mayoralas, Francisco Gaytan Muñoz, Miguel Barrio Orsikowsky, Мухаметов Амин, Geoffrey Wearmouth, Шарихин Александр Сергеевич, anonymous person, Chibiakumas.com, Marcos Lima, Владимир Смирнов
+-The following people who donated to ZEsarUX, in chronological order: Peter Jones, Daniel Leon Gonzalez, Jose Luis Fernandez Mayoralas, Francisco Gaytan Muñoz, Miguel Barrio Orsikowsky, Мухаметов Амин, Geoffrey Wearmouth, Шарихин Александр Сергеевич, anonymous person, Chibiakumas.com, Marcos Lima, Владимир Смирнов, Unai Landa Bonilla
 -Anyone who makes demos for the Spectrum, they are a good field of testing for my emulator.
 
 And mainly to this big genius, Clive Sinclair.
